Fixed #9, collapsed groups

--- a/css/controls.css
+++ b/css/controls.css
@@ -224,7 +224,6 @@ highcharts-separator {
 
     .hcc-group-controls {
         max-height: 1000px;
-        display: table;
         width: 100%;
         overflow: hidden;
         transition: max-height 250ms ease-in-out, opacity 250ms ease-in-out;
